# backscroll

./: .clippy.toml  .coverage-floors.toml  .gitignore  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  backscroll.toml.example  cliff.toml  context.md  coverage.out  deny.toml  final_acceptance_check.sh  go.mod  go.sum  install.ps1  install.sh  meta-prompt.md  research-external.md  scout-local-code.md  scout-tradeoffs.md  test_cli_v2.sh  verify_scenarios.sh
.cargo/: config.toml
.claude/: roadmap.local.md
.githooks/: post-merge  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
.pi/: settings.json
cmd/backscroll/: annotate.go  annotate_test.go  config.go  decisions.go  decisions_test.go  diagnostics.go  diagnostics_test.go  events.go  export.go  helpers.go  helpers_test.go  inputs.go  insights.go  list.go  list_coverage_test.go  main.go  main_test.go  patterns.go  patterns_coverage_test.go  patterns_sequences_test.go  projects.go  purge.go  read.go  rebuild.go  reindex.go  resume.go  search.go  search_robot_test.go  search_test.go  sessions.go  stats.go  status.go  sync.go  sync_helpers.go  sync_test.go  topics.go  validate.go
context/: t013-scout-findings.md
docs/: audit-integration.md  backlog.md  configuration.md  input-contract.md  intention-agentic-input-definitions.md  patterns.md  read.md  search.md  sync.md
docs/epics/: .stem  E01-infraestructura-core.md  E02-ingesta-defensiva.md  E03-motor-busqueda.md  E04-distribucion-estatica.md  E05-calidad-cobertura.md
docs/eval/: README.md  corrections-calibration.md  queries.toml
docs/roadmap/: .roadmapctl.toml  .stem  (+20 more)
inputs/: categories.toml  claude.inputs.toml  decisions.inputs.toml  opencode.inputs.toml  pi.inputs.toml
research/: backscroll-local-context.md  pi-memory-tradeoffs.md
scripts/: check-coverage.sh  eval.sh  test-autoupdate-smoke.sh
src/: config.rs  db.rs  domain.rs  errors.rs  input_config.rs  lib.rs  main.rs  output.rs  sync.rs
tests/: cli.rs  decisions_snapshots.rs  input_config.rs  lib_api.rs  test-install.ps1  test-install.sh
(+545 files in other folders)
