[package]
name = "backscroll"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
hex = "0.4.3"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = { version = "1.46.3", features = ["yaml", "json"] }
predicates = "3.1.4"
tempfile = "3.26.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
