[package]
name = "backscroll"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "CLI tool that indexes Claude Code session logs into SQLite FTS5 for full-text search"
repository = "https://github.com/pablontiv/backscroll"
homepage = "https://github.com/pablontiv/backscroll"
documentation = "https://github.com/pablontiv/backscroll#readme"
readme = "README.md"
keywords = ["claude", "search", "fts5", "sqlite", "cli"]
categories = ["command-line-utilities", "database"]
exclude = [
    "docs/epics/",
    "docs/research/",
    "tests/",
    ".claude/",
    ".github/",
    ".githooks/",
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
hex = "0.4.3"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = { version = "1.46.3", features = ["yaml", "json"] }
predicates = "3.1.4"
tempfile = "3.26.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
